--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 jetbrains-annotations = "24.1.0"
-spigot = "1.20.1-R0.1-SNAPSHOT"
-paperSpigot = "1.20.1-R0.1-SNAPSHOT"
+spigot = "1.21.1-R0.1-SNAPSHOT"
+paperSpigot = "1.21.1-R0.1-SNAPSHOT"
 junit = "5.10.1"
 mockito = "4.11.0"
 adventure-api = "4.14.0"
@@ -43,7 +43,8 @@ module = "net.kyori:adventure-api"
 version.ref = "adventure-api"
 
 [plugins]
-shadowjar = { id = "com.github.johnrengelman.shadow", version.ref = "plugin-shadowjar" }
+shadowjar = { id = "com.gradleup.shadow", version = "8.3.0" }
 spotless = { id = "com.diffplug.spotless", version.ref = "plugin-spotless" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 bukkit = { id = "net.minecrell.plugin-yml.bukkit", version.ref = "plugin-bukkit" }
+run-paper = { id = "xyz.jpenilla.run-paper", version = "2.3.1" }
