--- a/inventory-framework-platform-paper/build.gradle
+++ b/inventory-framework-platform-paper/build.gradle
@@ -11,7 +11,8 @@ dependencies {
 }
 
 java {
-    targetCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_21
+    disableAutoTargetJvm()
 }
 
 shadowJar {
